@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Produto {
  -idProduto
  -designacao
  -peso
  -precoBase
}

class TransferenciaProduto {
  -idTransferencia
  -quantidade
}

class EstadoTransferencia {
  -id
  -designacao
}

class Farmacia {
  -NIF
  -email
  -morada
}

Farmacia "1" -- "*" Farmacia: pede produto a >
Farmacia "1" -- "*" Produto: tem >

Farmacia "1" -- "*" TransferenciaProduto: realiza >
TransferenciaProduto "1" -- "*" EstadoTransferencia: tem >
TransferenciaProduto "1" -- "1" Produto: referente a >

@enduml